--- a/assets/scss/_commons.scss
+++ b/assets/scss/_commons.scss
@@ -11,4 +11,22 @@ $d-flex: flex;
     .textSize-#{$i}{font-size: 1em * $i;}
 }
 
+html{
+    font-size: 62.5%;
+    margin: auto;
+}
 
+body{
+    padding: 0 ;
+    min-height: 100vh;
+    margin: 0 auto;
+    background-color: #e4e4e4;
+    
+}   
+
+h1{
+    color: rgba(63, 105, 191, 1);
+}
+h2{
+    font-size: 3em;
+}
