--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -2,14 +2,27 @@ footer{
     background-color: rgba(191, 172, 116, 1) ;
     bottom: 0;
     width: 100%;
-    font-size: 1rem;
+    
     padding-top: 10px;
     background: rgb(167,133,85);
     background: linear-gradient(0deg, rgba(167,133,85,1) 0%, rgba(218,205,178,1) 100%);
-    
-    
+     ul{
+         text-decoration: none;
+            li{
+                
+                    a{
+                        color: rgba(63, 105, 191, 1);
+                        text-decoration: none;
+                        font-size: 1.5rem;
+                    }
+            }    
+        }
+    h3{
+            color: rgba(68, 75, 114, 1);
+            font-weight: 600;
+            font-size: 2.5rem;
+        }
 }
-
     .pie{
         display: flex;
         flex-flow: row wrap;
@@ -25,20 +38,7 @@ footer{
         text-align: center;
     }
 
-    footer{
-        ul{
-            li{
-                a{
-                    color: rgba(63, 105, 191, 1);
-                    text-decoration: none;
-                    font-size: 1em;
-                }
-            }    
-        }
-    }  
-        
-    
-
+         
     .footer__header{
         
         text-transform: uppercase;
